// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RoundBtn.styled RoundBtn should accept wide argument 1`] = `
.c0 {
  position: relative;
  cursor: pointer;
  padding: 0;
  border: 0;
  outline: 0;
  width: 100%;
  height: 3rem;
  line-height: 3rem;
  font-size: 1.6rem;
  border-radius: 3rem;
  background-color: #333;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.15s ease,background-color 0.15s ease;
  transition: color 0.15s ease,background-color 0.15s ease;
  grid-row-start: 5;
  grid-column-start: 1;
  grid-row-end: 5;
  grid-column-end: span 2;
}

.c0:hover {
  opacity: 0.25;
}

@media only screen and (max-width:425px) {
  .c0 {
    height: 2rem;
    line-height: 2rem;
    font-size: 1.2rem;
    border-radius: 2rem;
    width: 100%;
  }
}

<button
  className="c0"
>
  AC
</button>
`;

exports[`RoundBtn.styled RoundBtn should look like a button 1`] = `
.c0 {
  position: relative;
  cursor: pointer;
  padding: 0;
  border: 0;
  outline: 0;
  width: 3rem;
  height: 3rem;
  line-height: 3rem;
  font-size: 1.6rem;
  border-radius: 3rem;
  background-color: #333;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.15s ease,background-color 0.15s ease;
  transition: color 0.15s ease,background-color 0.15s ease;
}

.c0:hover {
  opacity: 0.25;
}

@media only screen and (max-width:425px) {
  .c0 {
    height: 2rem;
    line-height: 2rem;
    font-size: 1.2rem;
    border-radius: 2rem;
    width: 2rem;
  }
}

<button
  className="c0"
>
  7
</button>
`;

exports[`RoundBtn.styled RoundBtn should look like smaller in mobile 1`] = `
.c0 {
  position: relative;
  cursor: pointer;
  padding: 0;
  border: 0;
  outline: 0;
  width: 3rem;
  height: 3rem;
  line-height: 3rem;
  font-size: 1.6rem;
  border-radius: 3rem;
  background-color: #333;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.15s ease,background-color 0.15s ease;
  transition: color 0.15s ease,background-color 0.15s ease;
}

.c0:hover {
  opacity: 0.25;
}

@media only screen and (max-width:425px) {
  .c0 {
    height: 2rem;
    line-height: 2rem;
    font-size: 1.2rem;
    border-radius: 2rem;
    width: 2rem;
  }
}

<button
  className="c0"
>
  7
</button>
`;

exports[`RoundBtn.styled RoundBtnOrange should works 1`] = `
.c0 {
  position: relative;
  cursor: pointer;
  padding: 0;
  border: 0;
  outline: 0;
  width: 3rem;
  height: 3rem;
  line-height: 3rem;
  font-size: 1.6rem;
  border-radius: 3rem;
  background-color: #333;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.15s ease,background-color 0.15s ease;
  transition: color 0.15s ease,background-color 0.15s ease;
}

.c0:hover {
  opacity: 0.25;
}

.c1 {
  background-color: #ff9503;
}

.c1:focus {
  background-color: #fff;
  color: #ff9503;
}

@media only screen and (max-width:425px) {
  .c0 {
    height: 2rem;
    line-height: 2rem;
    font-size: 1.2rem;
    border-radius: 2rem;
    width: 2rem;
  }
}

<button
  className="c0 c1"
>
  /
</button>
`;

exports[`RoundBtn.styled RoundBtnWhite should works 1`] = `
.c0 {
  position: relative;
  cursor: pointer;
  padding: 0;
  border: 0;
  outline: 0;
  width: 3rem;
  height: 3rem;
  line-height: 3rem;
  font-size: 1.6rem;
  border-radius: 3rem;
  background-color: #333;
  color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-transition: color 0.15s ease,background-color 0.15s ease;
  transition: color 0.15s ease,background-color 0.15s ease;
}

.c0:hover {
  opacity: 0.25;
}

.c1 {
  background-color: #a5a5a5;
  color: #1c1c1c;
}

.c1:focus {
  background-color: #fff;
  color: #1c1c1c;
}

@media only screen and (max-width:425px) {
  .c0 {
    height: 2rem;
    line-height: 2rem;
    font-size: 1.2rem;
    border-radius: 2rem;
    width: 2rem;
  }
}

<button
  className="c0 c1"
>
  /
</button>
`;
